kustomize-argoupdater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers: docker.io/choisunhong5717/argoupdater
      - image: 
        name: sample
        ports:
        - containerPort: 5000
